deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shrtbrd-deployment
  namespace: shortbrd-app
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: jmreyesv/my-shrtbread:1.0
        ports:
        - containerPort: 3000
        livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
