deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: shortbrd-app
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:9.3
        ports:
        - containerPort: 5432
