service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: shortbrd-app
  labels:
    name: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: db
