service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: shortbrd-app
  labels:
    name: web
  #annotations:
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert:
    #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  #type: LoadBalancer
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: web
