ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-web-ingress
  #annotations:
    #kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - myshrtbrd.com
    secretName: myshrtbrd-tls
  rules:
  - host: myshrtbrd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
